--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <li><a href="Index.html" class="current">Home</a></li>
         <li><a href="Products.html">Products</a></li>
         <li><a href="Services.html">Services</a></li>
-        <li><a href="Presonlised packages offered.html">packages</a></li>
+        <li><a href="Presonlised packages offered.html">Packages</a></li>
       </ul>
     </div>
     <div class="icons">
@@ -206,3 +206,4 @@
     <script src="Silder.js"></script>
   </body>
 </html>
+
