Fix HTML structure and formatting issues

--- a/Customer- support.html
+++ b/Customer- support.html
@@ -50,7 +50,8 @@
   <div class="faq-container">
     <div class="faq active">
       <h3 class="faq-title">
-        What types of printing services does Paper Print offer?
+        What types of printing services does 
+        <br>Paper-Print offer?
         </h3>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
@@ -60,7 +61,8 @@
     </div>
     <div class="faq">
       <h3 class="faq-title">
-        Can I place an order online or do I have to visit in person?
+        Can I place an order online or do I have 
+        <br>to visit in person?
       </h3>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
@@ -90,7 +92,8 @@
     </div>
     <div class="faq">
       <h3 class="faq-title">
-        Are there loyalty or discount programs for regular customers?
+        Are there loyalty or discount programs
+        <br> for regular customers?
        </h3>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
